tests/miz/pass/types/pass_type_elaboration_reserved_object_variable_equality_001.miz
reserve x for object;
theorem ReservedObjectVariableEqualityPayloadBoundary: x = x;
