tests/miz/fail/parser/fail_parser_atomic_formula_missing_rhs_001.miz
import parser.type_fixtures;
theorem MissingRhs: x = ;
